<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:layout_gravity="center"
              android:orientation="vertical"
              tools:context="android.finalproject.bshop.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="30dp"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_login_userid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_id"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/TextAppearance.AppCompat"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_login_userpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/TextAppearance.AppCompat"
                    />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/auto_login_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="자동로그인"
                android:textColor="@color/colorAccent"
                android:layout_gravity="left"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button"/>
                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/action_sign_up"
                    android:background="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
